GUI-1706: Fix whitespace issues on login page

--- a/eucaconsole/static/sass/pages/login.scss
+++ b/eucaconsole/static/sass/pages/login.scss
@@ -38,11 +38,10 @@
     }
     .tabs-content {
         padding: 1rem;
-        padding-bottom: 2rem;
         background-color: white;
         border: 1px solid $hp-gray-20;
         .content {
-            width: 85%;
+            width: 95%;
             margin: 0 auto;
         }
     }
